# protoc-gen-micro-gateway

./: BUILD.bazel  README.md  main.go
descriptor/: BUILD.bazel  registry.go  services.go  services_test.go  types.go
generator/: BUILD.bazel  generator.go
gengateway/: BUILD.bazel  generator.go  generator_test.go  template.go  template_test.go
httprule/: BUILD.bazel
